overflow fix

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -84,6 +84,7 @@
         flex-direction: column;
         gap: 12px;
         z-index: 2;
+        overflow: hidden;
 
         &_main {
             padding: 0 20% 0 60px;
